# Python-Code-Harmonizer

./: .gitignore  .harmonizer.yml.template  .harmonizerignore  .pre-commit-config.yaml  .pre-commit-config.yaml.template  ANNOUNCEMENT_v1.3.txt  CHANGELOG.md  COMPETITIVE_ANALYSIS.md  CONTRIBUTING.md  FALSE_POSITIVE_ANALYSIS.md  FEATURES.md  HARMONIOUS_UX_CHANGELOG.md  IMPROVEMENTS_IMPLEMENTED.md  INTEGRATION_COMPLETE.md  LEGACY_CODE_MAPPER.md  MATHEMATICAL_FOUNDATION.md  MATH_VALIDATION_REPORT.md  PythonCodeHarmonizer.py  QUALITY_OF_LIFE_ROADMAP.md  README.md  RELATIONSHIP_INSIGHT_IMPLEMENTATION.md  RELATIONSHIP_INSIGHT_SYNTHESIS.md  SEMANTIC_PROGRAMMING_LANGUAGE.md  UX_IMPROVEMENTS_SUMMARY.md  VERSION_UPDATE_SUMMARY.md  anchor_analysis_V2.py  check_harmony.py  demo_semantic_naming.py  demo_v2.py  harmonizer.html  harmonizer_report.html  pyproject.toml  pytest.ini  requirements.txt  test_enhanced_parser.py  test_example.py  test_harmonizer_enhanced.py  test_language_semantics.py  test_mixing_formula.py  test_primitives.py
cli/: README.md  requirements.txt
docs/: API.md  ARCHITECTURE.md  BASELINE_INTEGRATION.md  CASE_STUDIES.md  CHANGELOG.md  CI_CD_INTEGRATION.md  CI_FIXES.md  CI_VERIFICATION_REPORT.md  CODEBASE_FIX_REPORT.md  CODEBASE_IMPROVEMENT_REPORT.md  CODE_SEMANTICS_SUMMARY.md  COMPARISON.md  CONFIGURATION.md  Dynamic LJPW Model v4.0 - Specification and Theoretical Foundations and Empirical Validation of the LJPW v4.0 Model via Bayesian Calibration.md  ENHANCED_PARSER_INTEGRATION.md  FAQ.md  INSIGHT_SUMMARY_FOR_USER.md  LJPW Mathematical Baselines Reference V4.md  LJPW_CODEX_IMPLEMENTATION.md  LJPW_Codex.md  LJPW_Complete_Synthesis.md  LJPW_Framework_Core_Manual.md  LJPW_Framework_Unified_Manual.md  LJPW_Insights_For_Translation.md  LJPW_MATHEMATICAL_BASELINES.md  LJPW_Universal_Translator_Codex.md  MATHEMATICAL_FOUNDATION.md  META_ANALYSIS_V2.md  MIXING_FORMULA_REPORT.md  PHILOSOPHY.md  PROGRAMMING_LANGUAGE_SEMANTICS.md  QUICK_REFERENCE.md  RELATIONSHIP_ANALYSIS.md  RELEASE_v1.3.md  RESONANCE_MECHANISM.md  RESONANCE_PARADIGM.md  SEMANTIC_OSCILLATION_EXPERIMENT.md  SIMPLE_WEB_APP_PLAN.md  THE_FRAMEWORK_SPEAKS.md  TROUBLESHOOTING.md  (+9 more)
examples/: demo_ljpw_v4.py  demo_semantic_naming.py  demo_v2.py  real_world_bugs.py  realistic_code_samples.py  refactoring_journey.py  severity_levels.py  test_code.py
harmonizer/: ast_semantic_parser.py  ast_semantic_parser_v2.py  config.py  coordinate_utils.py  dependency_engine.py  disharmonious_class_method.py  divine_invitation_engine_V2.py  legacy_mapper.py  ljpw_baselines.py  main.py  programming_constructs_vocabulary.py  refactorer.py  relationship_analyzer.py  resonance_engine.py  semantic_map.py  semantic_naming.py  visualizer.py
harmonizer_autonomous/: __init__.py  breath.py  healer.py  reader.py  seed.py  voice.py
harmonizer_v73/: __init__.py  bricks_mortar.py  code_analyzer.py  comparison.py  consciousness.py  constants.py  drift_detector.py  dynamics.py  ljpw_core.py  main.py  phase_detector.py  phi_normalizer.py  vocabulary.py
harmonizer_v84/: __init__.py  bricks_mortar.py  code_analyzer.py  constants.py  drift_detector.py  ljpw_core.py  main.py  phase_detector.py  phi_normalizer.py
scripts/: anchor_analysis_V2.py  empirical_validation.py  run_validation.py  validate_relationship_hypothesis.py  verify_tech_debt.py
src/: ast_semantic_parser.py  divine_invitation_engine_V2.py
tests/: conftest.py  test_engine.py  test_enhanced_parser.py  test_generative_v84.py  test_harmonizer.py  test_harmonizer_enhanced.py  test_harmonizer_v73.py  test_harmonizer_v84.py  test_language_semantics.py  test_legacy_mapper.py  test_ljpw_baselines.py  test_mixing_formula.py  test_parser.py  test_primitives.py  test_refactorer.py  (+2 more)
(+29 files in other folders)
