[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PythonCodeHarmonizer"
version = "2.0.0"
description = "The world's first semantic code debugger with a mathematically proven foundation."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.scripts]
harmonizer = "harmonizer.main:run_cli"

[project.optional-dependencies]
refactor = ["black>=24.4.2"]

[tool.setuptools.packages.find]
where = ["."]
include = ["harmonizer"]
