[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "python-code-harmonizer"
version = "1.5.0"
description = "A semantic code analysis tool using the LJPW v4.0 Framework"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Python Code Harmonizer Contributors"}
]
keywords = ["code-analysis", "semantic-analysis", "ljpw", "code-quality"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "PyYAML>=6.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=24.4.2",
    "astunparse>=1.6.3",
    "flake8>=6.0",
    "isort>=5.12",
    "pre-commit>=3.0",
]

[project.scripts]
harmonizer = "harmonizer.main:run_cli"

[project.urls]
Homepage = "https://github.com/yourusername/python-code-harmonizer"
Documentation = "https://github.com/yourusername/python-code-harmonizer/tree/main/docs"
Repository = "https://github.com/yourusername/python-code-harmonizer"
Issues = "https://github.com/yourusername/python-code-harmonizer/issues"

[tool.harmonizer.thresholds]
# More realistic thresholds for real-world codebases
# The harmonizer itself demonstrates semantic patterns that deviate from ideal
max_disharmony = 2.5
max_imbalance = 1.2  # Increased from 0.8 - real code naturally deviates from NE
min_density = 0.02   # Decreased - utility/config code has low power naturally

[tool.harmonizer.paths]
exclude = ["venv", ".git", "__pycache__", "build", "dist", "tests", "examples"]
report = "harmonizer_report.html"

[tool.harmonizer.analysis]
complexity_weight = 0.2

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
extend-exclude = '''
/(
  \.git
  | \.venv
  | __pycache__
  | docs
  | examples
  | \.pytest_cache
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
